# rcars

./: LICENSE  README.txt
rcars_detector/: CMakeLists.txt  package.xml
rcars_detector/cv2cg/: OpenCVHeaders.h  README  cv2cgConfig.h
rcars_detector/cv2cg/apriltag/: TagDetection.hpp  TagDetector.hpp
rcars_detector/src/: rcars_detector_node.cpp
rcars_estimator/: CMakeLists.txt  package.xml
rcars_estimator/config/: EKFsettings.info  cameraView.rviz  debug.rviz
rcars_estimator/config/workspaces/: example.yaml
rcars_estimator/include/: FilterInterface_RCARS.hpp  FilterRCARS.hpp  FilterStates.hpp  ImuPrediction.hpp  TagUpdate.hpp  config.hpp
rcars_estimator/include/quickstart/: RcarsToRobotPose.h
rcars_estimator/launch/: record_processed_data.launch  vi-sensor_left.launch  vi-sensor_left_bag.launch  vi-sensor_left_detector_only.launch  vi-sensor_left_record.launch
rcars_estimator/src/: FilterInterface_RCARS.cpp  rcarsToRobotPoseExample.cpp  rcars_estimator_node.cpp  rcars_test.cpp
rcars_estimator/srv/: FilterStatus.srv
rcars_visualization/: CMakeLists.txt  package.xml
rcars_visualization/launch/: loopClosure.launch  path.launch  visualization.launch
rcars_visualization/src/: rcars_image_visualization_node.cpp  rcars_loop_closure_evaluation_node.cpp  rcars_path_visualization_node.cpp  rcars_tf_publisher_node.cpp
